--- a/package.json
+++ b/package.json
@@ -19,11 +19,15 @@
     "prettier": "^2.6.2"
   },
   "dependencies": {
-    "faker": "^5.5.3",
     "@hapi/boom": "^10.0.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.1",
     "express": "^4.18.1",
-    "joi": "^17.6.0"
+    "faker": "^5.5.3",
+    "joi": "^17.6.0",
+    "pg": "^8.7.3",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.20.1"
   },
   "engines": {
     "node": "16.x"
