--- a/package.json
+++ b/package.json
@@ -30,10 +30,10 @@
     "faker": "^5.5.3",
     "joi": "^17.6.0",
     "mysql2": "^2.3.3",
-    "pg": "^8.7.3",
-    "pg-hstore": "^2.3.4",
     "sequelize": "^6.20.1",
-    "sequelize-cli": "^6.4.1"
+    "sequelize-cli": "^6.4.1",
+    "pg": "^8.7.3",
+    "pg-hstore": "^2.3.4"
   },
   "engines": {
     "node": "16.x"
