--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "mysql2": "^2.3.3",
     "sequelize": "^6.20.1",
     "pg": "^8.7.3",
-    "pg-hstore": "^2.3.4"
+    "pg-hstore": "^2.3.4",
+    "sequelize-cli": "^6.4.1"
   },
   "engines": {
     "node": "16.x"
