--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "node index.js",
     "lint": "eslint",
     "migrations:generate": "sequelize-cli migration:generate --name",
-    "migrations:run": "sequelize db:migrate",
+    "migrations:run": "sequelize-cli db:migrate",
     "migrations:revert": "sequelize-cli db:migrate:undo",
     "migrations:delete": "sequelize-cli db:migrate:undo:all"
   },
@@ -23,17 +23,17 @@
     "prettier": "^2.6.2"
   },
   "dependencies": {
-    "@hapi/boom": "^10.0.0",
+    "@hapi/boom": "^9.1.4",
     "cors": "^2.8.5",
-    "dotenv": "^16.0.1",
-    "express": "^4.18.1",
+    "dotenv": "^10.0.0",
+    "express": "^4.17.1",
     "faker": "^5.5.3",
-    "joi": "^17.6.0",
-    "mysql2": "^2.3.3",
-    "pg": "^8.7.3",
+    "joi": "^17.4.2",
+    "mysql2": "^2.3.0",
+    "pg": "^8.7.1",
     "pg-hstore": "^2.3.4",
-    "sequelize": "^6.20.1",
-    "sequelize-cli": "^6.4.1"
+    "sequelize": "^6.6.5",
+    "sequelize-cli": "^6.2.0"
   },
   "engines": {
     "node": "16.x"
