--- a/package.json
+++ b/package.json
@@ -30,10 +30,10 @@
     "faker": "^5.5.3",
     "joi": "^17.4.2",
     "mysql2": "^2.3.0",
-    "pg": "^8.7.1",
-    "pg-hstore": "^2.3.4",
     "sequelize": "^6.6.5",
-    "sequelize-cli": "^6.2.0"
+    "sequelize-cli": "^6.2.0",
+    "pg": "^8.7.1",
+    "pg-hstore": "^2.3.4"
   },
   "engines": {
     "node": "16.x"
