--- a/package.json
+++ b/package.json
@@ -24,16 +24,17 @@
   },
   "dependencies": {
     "@hapi/boom": "^9.1.4",
+    "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "faker": "^5.5.3",
     "joi": "^17.4.2",
     "mysql2": "^2.3.0",
-    "sequelize": "^6.6.5",
-    "sequelize-cli": "^6.2.0",
     "pg": "^8.7.1",
-    "pg-hstore": "^2.3.4"
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.6.5",
+    "sequelize-cli": "^6.2.0"
   },
   "engines": {
     "node": "16.x"
